# mujoco_ray_caster

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README.zh-CN.md  compute.md  compute.zh-CN.md  ray_caster_plugin.cc  ray_plugin.cc  ray_plugin.h
demo/Python/: sensor_data_viewer_all_img.py  stereo_camera.py
doc/: composable-data-output.md  depth-camera-config-guide.md  source-reading-guide.md
model/: ray_caster4.xml
raycaster_src/: RayCaster.cpp  RayCaster.h  RayCasterCamera.cpp  RayCasterCamera.h  RayNoise.hpp
real2sim/: README.md
real2sim/real_stereo_camera2sim/: .gitignore  README.md  build.sh  build_mujoco_raycaster_plugin.sh  build_mujoco_rgbd_collector.sh  check_orbbec_topics.sh  collect_latest_mujoco_depth.sh  export_bag_to_tum_rgbd.py  export_bag_to_tum_rgbd.sh  gemini336l_orbbec_params.yaml  launch_orbbec_gemini336l.sh  mujoco_camera_replay.xml  mujoco_custom_scene.xml  play_latest_mujoco_comparison.sh  play_mujoco_depth_comparison.py  print_coordinate_basis.py  print_coordinate_basis.sh  process_latest_recording.sh  record_rgbd_bag.sh  replay_latest_mujoco.sh  replay_trajectory_mujoco.py  replay_trajectory_mujoco.sh  run_orbslam_rgbd.sh  view_trajectory_3d.py  view_trajectory_3d.sh  visualize_trajectory.py  visualize_trajectory.sh
real2sim/real_stereo_camera2sim/cmake/mujoco_rgbd_collector/: CMakeLists.txt
real2sim/real_stereo_camera2sim/cmake/raycaster_plugin/: CMakeLists.txt
real2sim/real_stereo_camera2sim/src/: mujoco_collect_rgbd.cpp
